<resources>
    <string name="app_name">MyFirsAndroidApp</string>
    <string name="back_button">Go back</string>
    <string name="profile_picture">Profile picture</string>
    <string name="admin">Admin</string>
    <string name="online">Online</string>
    <string name="menu">Menu</string>
    <string name="type_your_message_here">Type your message here</string>
    <string name="send_message">Send message</string>
    <string name="enter_dimensions">Enter dimensions:</string>
    <string name="enter_second_dimension">Enter second dimension</string>
    <string name="enter_first_dimension">Enter first dimension</string>
    <string name="start_game">Start Game</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_rows_count">Enter rows count</string>
    <string name="enter_columns_count">Enter columns count</string>
    <string name="select_grid_size">Select Board Size</string>
    <string name="_3x3_grid">3x3 Grid</string>
    <string name="_4x4_grid">4x4 Grid</string>
    <string name="_5x5_grid">5x5 Grid</string>
    <string name="btn">btn</string>
    <string name="go_back_btn">go_back_btn</string>
</resources>