<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/menuFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuFragment">

    <RelativeLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <TextView
            android:id="@+id/selectGridSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_grid_size"
            android:textSize="18sp"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="32dp"
            android:layout_marginTop="50dp"
            android:layout_alignParentTop="true"/>

        <CheckBox
            android:id="@+id/checkbox3x3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_3x3_grid"
            android:layout_below="@id/selectGridSize"
            android:layout_marginTop="16dp"/>

        <CheckBox
            android:id="@+id/checkbox4x4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_4x4_grid"
            android:layout_below="@id/checkbox3x3"
            android:layout_marginTop="16dp"/>

        <CheckBox
            android:id="@+id/checkbox5x5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_5x5_grid"
            android:layout_below="@id/checkbox4x4"
            android:layout_marginTop="16dp"/>

        <Button
            android:id="@+id/startGameButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_game"
            android:layout_below="@id/checkbox5x5"
            android:layout_marginTop="32dp"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>

</FrameLayout>